New page and info

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,46 +28,57 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="Images/rsz_1120.jpg">
+                    <!-- <img src="Images/rsz_1120.jpg"> -->
+                    <img src="/Images/aboutme.jpeg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title"> About Me</h1>
                     <br>
                     <h2> Personal Information </h3>
-                    <br>
-                    <p> My name is Nikol Alexandrova and I am 18 years old. I am from Bulgaria. I was an IB student and
+                        <br>
+                        <!-- <p> My name is Nikol Alexandrova and I am 18 years old. I am from Bulgaria. I was an IB student and
                         undertook the following classes: Bulgarian, English, German, Math, Business, Computer Science
                         and Theory of Knowledge. In my free time I go out with friends, read and watch movies/TV series.
                         Some of my favourire books are Rich Dad Poor Dad
-                        and Pride and Prejudice. </p>
+                        and Pride and Prejudice. </p> -->
+                        <p>I am Nikol Alexandrova, an 18-year-old individual hailing from Bulgaria. My academic journey
+                            was enriched as an International Baccalaureate (IB) student, where I engaged in a diverse
+                            curriculum encompassing subjects such as Bulgarian, English, German, Mathematics, Business,
+                            Computer Science, and Theory of Knowledge.
 
-                    <!-- ------------Tab-Titles---------- -->
-                    <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('Hobbies')">Hobbies</p>
-                        <p class="tab-links" onclick="opentab('Facts about me')">Facts about me</p>
-                    </div>
-                    <div class="tab-contents active-tab" id="Skills">
-                        <ul>
-                            <li><span>Java</span><br>App Interfaces</li>
-                            <li><span>SQL</span><br>MySQL</li>
+                            Beyond my academic pursuits, I relish my leisure time by socializing with friends, immersing
+                            myself in literature, and indulging in movies and TV series. Among the books that have left
+                            a lasting impression on me are "Rich Dad Poor Dad" and the timeless classic "Pride and
+                            Prejudice."</p>
 
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="Hobbies">
-                        <ul>
-                            <li><span>Drawing</span><br>I draw portraits</li>
-                            <li><span>Reading</span><br>I mostly read fantasy, romance and finance books</li>
+                        <!-- ------------Tab-Titles---------- -->
+                        <div class="tab-titles">
+                            <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
+                            <p class="tab-links" onclick="opentab('Hobbies')">Hobbies</p>
+                            <p class="tab-links" onclick="opentab('Facts about me')">Facts about me</p>
+                        </div>
+                        <div class="tab-contents active-tab" id="Skills">
+                            <ul>
+                                <li><span>Java</span><br>App Interfaces</li>
+                                <li><span>SQL</span><br>MySQL</li>
 
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="Facts about me">
-                        <ul>
-                            <li><span>Languages</span><br>I enjoy studying languages. I have studied spanish, german, english and russian and for now know German and English.</li>
-                            <li><span>Gym</span><br>I go to the gym 4-5 times a week.</li>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="Hobbies">
+                            <ul>
+                                <li><span>Drawing</span><br>I draw portraits</li>
+                                <li><span>Reading</span><br>I mostly read fantasy, romance and finance books</li>
 
-                        </ul>
-                    </div>
+                            </ul>
+                        </div>
+                        <div class="tab-contents" id="Facts about me">
+                            <ul>
+                                <li><span>Languages</span><br>I enjoy studying languages. I have studied spanish,
+                                    german, english and russian and for now know German and English.</li>
+                                <li><span>Gym</span><br>I go to the gym 4-5 times a week.</li>
+
+                            </ul>
+                        </div>
                 </div>
             </div>
         </div>
