--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="blog-container">
-        <div class="card">
+        <div class="blog-card">
             <div class="card__header">
                 <img src="/Images/IMG_0A148E862F57-1 2.jpeg" alt="card__image" class="card__image" width="600">
             </div>
@@ -44,7 +44,7 @@
                     only one field of the IT world.</p>
             </div>
         </div>
-        <div class="card">
+        <div class="blog-card">
             <div class="card__header">
                 <img src="/Images/1123.JPEG" alt="card__image" class="card__image" width="600">
             </div>
@@ -55,7 +55,7 @@
                     of my code and need to do research.</p>
             </div>
         </div>
-        <div class="card">
+        <div class="blog-card">
             <div class="card__header">
                 <img src="/Images/pexels-rodrigo-santos-3888151.jpg" alt="card__image" class="card__image" width="600">
             </div>
@@ -69,7 +69,7 @@
     </div>
 
     <div class="second-blog-container">
-        <div class="card">
+        <div class="blog-card">
             <div class="card__header">
                 <img src="/Images/pexels-thirdman-5256816.jpg" alt="card__image" class="card__image" width="600">
             </div>
@@ -80,7 +80,7 @@
                     and each of us presented our projects. </p>
             </div>
         </div>
-        <div class="card">
+        <div class="blog-card">
             <div class="card__header">
                 <img src="/Images/pexels-sora-shimazaki-5926382.jpg" alt="card__image" class="card__image" width="600">
             </div>
