--- a/feedback.html
+++ b/feedback.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="first-feedback">
     <div id="header1">
         <div class="container">
             <nav>
@@ -24,6 +24,69 @@
             </nav>
         </div>
     </div>
+    <div class="feedback-title">
+        <h1>First Feedback</h1>
+    </div>
+    <div class='feedback-container'>
+        <div class="container_content">
+            <div class="container_content_inner">
+                <!-- <div class="feedback-title2">
+                    <h1>Hello World</h1>
+                </div> -->
+                <div class="par">
+                    <p>
+                        So far, I have solicited valuable feedback from diverse sources, including my family, friends,
+                        and teachers. My family's insights have emphasized the importance of enhancing the website's
+                        contemporary aesthetics and revising certain informational content across the pages. In
+                        contrast, my friends have commended my choice of color schemes, while offering constructive
+                        suggestions pertaining to refining the user experience. Their recommendations encompass the
+                        implementation of an "active" class within the navigation bar and optimizing text and image
+                        placement in specific sections. My teachers have underscored the significance of embarking on
+                        the development of a responsive web design.
+                        Upon receiving constructive feedback, I have been diligently working to enhance my website. Many
+                        of the issues highlighted have already been addressed. I want to emphasize that the website is
+                        an ongoing project, and I am committed to resolving all identified issues and continually
+                        improving its quality over time.
+                    </p>
+                </div>
+                <!-- <div class="btns">
+                    <button class='btns_more'> See more </button>
+                </div> -->
+            </div>
+        </div>
+        <div class="container_outer_img">
+            <div class="img-inner">
+                <img src='/Images/Beige Minimalist Photo Collage Personal Profile Poster.png' alt=""
+                    class="container_img" />
+            </div>
+        </div>
+    </div>
+    <div class="overlay"></div>
+    <section id="form-section">
+        <h1 class="h1-tag">Your Feedback Is Important For Me</h1>
+        <form class="form-content">
+            <div class="form-group">
+                <label for="exampleInputText">Name</label> <br>
+                <!-- <input type="text" class="form-control" id="exampleInputText" placeholder="Enter Your Name" rows="3"> -->
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label> <br>
+                <!-- <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter email"> -->
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputText">Contact Number(Optional)</label> <br>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Example text area</label> <br>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="submit" class="feedback-btn btn-primary">Submit</button>
+        </form>
+    </section>
 </body>
 <footer>
     <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
