--- a/ictfield.html
+++ b/ictfield.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="ict">
     <div id="header1">
         <div class="container">
             <nav>
@@ -24,12 +24,154 @@
             </nav>
         </div>
     </div>
+    <div class="ict-title">
+        <h1>ICT Field</h1>
+    </div>
+    <div class="ict-container">
+        <div class="card card1">
+            <h3 class="title">IBM</h3>
+            <h5>Click here to learn more</h5>
+            <p class="info-data hidden">
+                <span class="subheading">What type of projects/work do they do?<br></span>
+                IBM is active in several areas of the technology business. They offer a variety of IT services, such as
+                consulting, cloud computing, cybersecurity, and managed services. They assist firms with the
+                implementation and management of IT infrastructure and applications. They have also produced computer
+                gear such as mainframes, servers, storage devices, and other items. They are continuing to innovate in
+                this field with technology such as quantum computing. The company creates software for businesses and
+                organizations. They are also a prominent player in the fields of artificial intelligence and machine
+                learning. They created the IBM Watson AI platform, which is utilized in a variety of sectors for tasks
+                such as natural language processing, picture identification, and data analytics.<br>
 
+                <span class="subheading">How big are they in number of staff? (Small business, multinational,
+                    etc.)<br></span>
+                IBM is a multinational technology company and one of the world's largest and most well-established IT
+                companies. IBM has a significant global presence and a large workforce<br>
 
+                <span class="subheading">What do they tell you about their company culture?<br></span>
+                IBM has a strong culture of innovation and has been at the forefront of technological advancements for
+                decades. They encourage employees to think creatively, explore new ideas, and pioneer emerging
+                technologies.<br>
+                The company places a strong emphasis on understanding and meeting the needs of its clients. They strive
+                to build long-term relationships by delivering value and solving clients' business challenges.
+                They have a commitment to diversity and inclusion. It is their aim to create a workplace where employees
+                from various backgrounds feel valued and have equal opportunities. IBM has been recognized for its
+                diversity and inclusion efforts. IBM is also dedicated to corporate responsibility and environmental
+                sustainability. They work on projects and initiatives to address societal challenges, support education,
+                and reduce their environmental impact. The company encourages a culture of continuous learning and skill
+                development. They invest in employee training and development to keep their workforce up-to-date with
+                evolving technologies.<br>
+                <span class="subheading">What job descriptions do they have?<br></span>
+                Software Developer/Engineer, Data Scientist/Data Analyst, Cloud Architect/Engineer, Consultant,
+                Cybersecurity Specialist, Hardware Engineer,
+                AI and Machine Learning Engineer, Project Manager, Sales and Marketing Professional, Research Scientist,
+                Supply Chain and Logistics Specialist, Human Resources Specialist, Financial Analyst, Legal Counsel,
+                Customer Support and Service.
+                <br>
+                <br>
+                <br>
+
+            </p>
+            <!-- <div class="info-container"></div> -->
+        </div>
+        <div class="card card2">
+            <h3 class="title">Salesforce</h3>
+            <h5>Click here to learn more</h5>
+            <p class="info-data2 hidden">
+                <span class="subheading">What type of projects/work do they do?<br></span>
+                Salesforce is a leading customer relationship management (CRM) platform that offers a wide range of
+                cloud-based services and solutions to help businesses manage their relationships and interactions with
+                customers. Some of the work they do is connected with Sales and Lead Management, Marketing Automation,
+                Customer Service and Support, Analytics and Business
+                Intelligence, Custom Application Development, Community and Portal Development, Integration, AI and
+                Machine Learning, Industry-Specific Solutions and Nonprofit and Philanthropic Initiatives.<br>
+                <span class="subheading">How big are they in number of staff? (Small business, multinational,
+                    etc.)<br></span>
+                Salesforce is a multinational company. It operates globally and has a presence in many countries around
+                the world. Salesforce is known for its cloud-based customer relationship management (CRM) solutions and
+                other enterprise software products, and it serves customers from various industries and regions. In
+                September 2021, Salesforce had more than 49,000 employees worldwide.<br>
+                <span class="subheading">What do they tell you about their company culture?<br></span>
+                Salesforce is known for its strong company culture, which is often highlighted in its messaging and core
+                values. Some key aspects of Salesforce's company culture include:<br>
+                Ohana (Family): Salesforce often refers to its employees and customers as part of the "Salesforce
+                Ohana," emphasizing a family-like environment where employees and customers are treated with care and
+                respect. Innovation: The company values innovation and encourages employees to think creatively and
+                develop new solutions. Equality: Salesforce is committed to promoting equality and diversity within the
+                workplace.
+                It has taken active steps to address issues related to gender, pay equity, and LGBTQ+ rights.
+                Sustainability:
+                Salesforce is dedicated to sustainability and environmental responsibility, striving to
+                minimize its environmental impact. Philanthropy: Through its 1-1-1 model, Salesforce donates 1% of its
+                product, 1% of its equity, and 1% of its employees' time to charitable causes. Employee Wellbeing:
+                Salesforce invests in employee wellness
+                and offers various programs and initiatives to support employee health and well-being. Customer-Centric:
+                The company prioritizes the success of its
+                customers and aims to build lasting relationships with them. Transparency: Salesforce promotes
+                transparency in its business practices and
+                decision-making.<br>
+                <span class="subheading">What job descriptions do they have?<br></span>
+                Sales and Account Management, Marketing Manager, Software Engineer, UI/UX Designer, Data Scientist,
+                Customer Support and Success:, Consulting and Professional Services, Information Technology, Human
+                Resources, Finance and Accounting, Legal and Compliance, Research and Development, Environment and
+                Sustainability:
+                Operations and Business Strategy and Salesforce Administration and Development.
+            </p>
+            <!-- <div class="info-container"></div> -->
+        </div>
+        <div class="card card3">
+            <h3 class="title">Apple</h3>
+            <h5>Click here to learn more</h5>
+            <p class="info-data hidden">
+                <span class="subheading">What type of projects/work do they do?<br></span>
+                Apple Inc. is involved in a wide range of projects and initiatives across various sectors. Some of the
+                key areas of work and projects that Apple is known for include:<br>
+                Consumer Electronics, Software Development, App Ecosystem, Retail, Services, Design and Innovation,
+                Research and Development, Environmental Initiatives, Content Creation, Privacy and Security, Health and
+                Fitness, Manufacturing and Supply Chain,<br>
+                <span class="subheading">How big are they in number of staff? (Small business, multinational,
+                    etc.)<br></span>
+                Apple operates globally and has a presence in numerous countries around the world. In September 2021,
+                Apple Inc. employed over 150,000 employees globally.<br>
+                <span class="subheading">What do they tell you about their company culture?<br></span>
+                Apple Inc. promotes a company culture that values innovation, creativity, and excellence. While the
+                specifics of a company's culture can evolve and vary, here are some elements that have historically been
+                associated with Apple's company culture:<br>
+                Innovation: Apple is renowned for its commitment to innovation and pushing the boundaries of technology.
+                The company encourages employees to think creatively and develop groundbreaking products.<br>
+                User-Centric Approach: Apple's culture emphasizes a strong focus on delivering exceptional user
+                experiences. This customer-centric approach is reflected in the design and usability of its
+                products.<br>
+                Design Excellence: Apple places a high value on product design and aesthetics. The company's design
+                teams work to create products that are not only functional but also visually appealing.<br>
+                Secrecy and Confidentiality: Apple has been known for its culture of secrecy, especially when it comes
+                to product development. This culture of confidentiality is intended to protect upcoming product
+                releases.<br>
+                <span class="subheading">What job descriptions do they have?<br></span>
+                Some of the positions they offer are Software Engineer, Hardware Engineer, User Interface (UI) Designer,
+                User Experience (UX) Designer, Product Manager, Technical Program Manager, Retail Specialist, Marketing
+                Manager, Quality Assurance Engineer
+            </p>
+        </div>
+    </div>
     
+    <script>
+        const cards = document.querySelectorAll('.card');
+        cards.forEach((card) => {
+            card.addEventListener('click', () => {
+                const info = card.querySelector('.info-data');
+                info.classList.toggle('hidden');
+            });
+        });
+        cards.forEach((card) => {
+            card.addEventListener('click', () => {
+                const info = card.querySelector('.info-data2');
+                info.classList.toggle('hidden');
+            });
+        });
+    </script>
+    <!-- <footer class="footer-ict">
+        <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
+    </footer> -->
 </body>
-<footer>
-    <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
-</footer>
 
 </html>
