--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,12 @@
     <title>My Profile</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+
 </head>
 
 <body>
@@ -52,14 +57,18 @@
             <a href="#"><i class="far fa-question-circle fa-2x"></i></a>
             <h2>Why did I choose ICT?</h2>
             <hr>
-            <p>ICT is a very interesting program that allows me to be flexible. Thanks to it, I don't need to focus on
-                only one field of the IT world. It enables me to explore more and combine my interests. For example, I
-                like programming but I also enjoy the part in which I have to choose how the interface of an app should
-                look or how a website should be done. Additionally, I am motivated to study this program, because I
-                don't feel the time passing by. Moreover, it doesn't make me stressed and I am feeling like I am
-                studying while having fun.
-                Furthermore, another good motivation for me is that it enables me to travel and work from different
-                parts of the world. </p>
+            <p>
+                The ICT program is incredibly captivating, offering me remarkable flexibility. It liberates me from the
+                constraints of specializing in just one aspect of the vast IT realm. Instead, it encourages me to
+                explore diverse domains and seamlessly blend my various interests.
+
+                For instance, I'm passionate about programming, yet I find immense satisfaction in shaping the interface
+                of apps and designing websites. What's even more intriguing is how this program keeps me motivated. Time
+                seems to fly by as I immerse myself in my studies, experiencing the joy of learning without stress.
+
+                Additionally, a major driving force for me is the program's potential to grant me the freedom to work
+                and travel worldwide, amplifying my enthusiasm and motivation.
+            </p>
         </div>
     </section>
 
@@ -91,13 +100,13 @@
             </div>
         </div>
 
-<footer class="footer-profile">
-    <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
-</footer>
+        <footer class="footer-profile">
+            <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
+        </footer>
     </section>
 
     <!-- Footer-->
-    
+
 </body>
 
 </html>
