--- a/studychoice.html
+++ b/studychoice.html
@@ -37,19 +37,27 @@
             </div>
             <p>I am studying ICT in the Netherlands.</p>
             <h2>Why did I choose to study it?</h2>
-            <p> I chose to study ICT because it is interesting and allows me to be flexible. I don't need to focus on
-                only one field of the IT world. It enables me to explore more and combine my interests. For example, I
-                like programming but I also enjoy the part in which I have to choose how the interface of an app should
-                look or how a website should be done. Additionally, the profession that this program offers me enables
-                me to travel around the world without having to sit in an office the whole day. </p>
+            <p> The ICT program is incredibly captivating, offering me remarkable flexibility. It liberates me from the
+                constraints of specializing in just one aspect of the vast IT realm. Instead, it encourages me to
+                explore diverse domains and seamlessly blend my various interests.
+
+                For instance, I'm passionate about programming, yet I find immense satisfaction in shaping the interface
+                of apps and designing websites. What's even more intriguing is how this program keeps me motivated. Time
+                seems to fly by as I immerse myself in my studies, experiencing the joy of learning without stress.
+
+                Additionally, a major driving force for me is the program's potential to grant me the freedom to work
+                and travel worldwide, amplifying my enthusiasm and motivation. </p>
         </section>
         <section class="studychoice-text-pt2">
             <h2>Do I have any experience with it so far?</h2>
-            <p> I started studying Computer science in eleventh grade so I've been studying it for two years now.
-                Along
-                with my studies in school, I had personal programming lessons, where I got more deeply into the
-                programming languages Java and SQL. Moreover, I also had an internship at a company, which helped me
-                learn how to work with JSON files and how to convert them to Java objects. </p>
+            <p> My journey into the realm of Computer Science commenced in the eleventh grade, and I've since dedicated
+                two years to its study. In addition to my academic coursework, I actively pursued personal programming
+                lessons that delved deeper into the intricacies of programming languages such as Java and SQL.
+
+                Furthermore, I seized an invaluable opportunity with an internship at a reputable company, where I
+                gained practical experience in handling JSON files and honed the skill of converting them into Java
+                objects. This hands-on experience greatly enriched my understanding of real-world applications in the
+                field of Computer Science. </p>
             <h2>What are my plans after the study?</h2>
             <p>I would like to work in an IT company either as a software engineer or business IT consultant. With
                 time
