--- a/swotanalysis.html
+++ b/swotanalysis.html
@@ -41,6 +41,7 @@
                             my code and need to do research. Moreover, I am flexible, which is very useful when my code
                             doesn't
                             work, because I try to think of other ways to achieve my final goal.</p>
+                        
                 </div>
 
                 <div class="weaknesses">
@@ -63,11 +64,11 @@
                 </div>
                 <div class="opportunities">
                     <h2>Opportunities</h1>
-                        <p>If I prioritise my weaknesses it will allow me to work on them more and improve in these
-                            fields. This
-                            could be very helpful when it comes to working in a company. This also includes stepping
-                            outside of my
-                            comfort zone. If I do that I would be able to make my weaknesses an opportunity.</p>
+                        <p>By prioritizing my weaknesses and dedicating more effort to overcome them, I can
+                            significantly enhance my capabilities. This personal growth will not only benefit my
+                            academic journey but also prepare me for a successful career in a professional environment.
+                            It involves taking the step out of my comfort zone to transform my weaknesses into
+                            opportunities.</p>
                 </div>
             </div>
         </section>
