--- a/aboutme.html
+++ b/aboutme.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="header1">
+    <!-- -------------header--------------- -->
+    <div id="header">
         <div class="container">
             <nav>
-                <h1>Nikol Alexandrova</h1>
+                <div id="name">
+                    <h1>Nikol Alexandrova</h1>
+                </div>
                 <ul>
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
@@ -24,11 +30,11 @@
             </nav>
         </div>
     </div>
+    <!-- ------------- About Me-------------- -->
     <section class="about">
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <!-- <img src="Images/rsz_1120.jpg"> -->
                     <img src="/Images/aboutme.jpeg">
                 </div>
                 <div class="about-col-2">
@@ -36,11 +42,6 @@
                     <br>
                     <h2> Personal Information </h3>
                         <br>
-                        <!-- <p> My name is Nikol Alexandrova and I am 18 years old. I am from Bulgaria. I was an IB student and
-                        undertook the following classes: Bulgarian, English, German, Math, Business, Computer Science
-                        and Theory of Knowledge. In my free time I go out with friends, read and watch movies/TV series.
-                        Some of my favourire books are Rich Dad Poor Dad
-                        and Pride and Prejudice. </p> -->
                         <p>I am Nikol Alexandrova, an 18-year-old individual hailing from Bulgaria. My academic journey
                             was enriched as an International Baccalaureate (IB) student, where I engaged in a diverse
                             curriculum encompassing subjects such as Bulgarian, English, German, Mathematics, Business,
