--- a/faq.html
+++ b/faq.html
@@ -7,14 +7,20 @@
     <title>Document</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div id="header1">
+<body class="faq-body">
+    <!-- -------------header--------------- -->
+    <div id="header">
         <div class="container">
             <nav>
-                <h1>Nikol Alexandrova</h1>
+                <div id="name">
+                    <h1>Nikol Alexandrova</h1>
+                </div>
                 <ul>
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html" class="active">FAQ</a></li>
@@ -26,7 +32,7 @@
             </nav>
         </div>
     </div>
-
+<!-- -------------FAQ Accordion--------- -->
     <div class="questions-image">
         <img src="/Images/pexels-ann-h-10988368-removebg-preview.png">
     </div>
