--- a/feedback.html
+++ b/feedback.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="first-feedback">
-    <div id="header1">
+    <!-- -------------header--------------- -->
+    <div id="header">
         <div class="container">
             <nav>
-                <h1>Nikol Alexandrova</h1>
+                <div id="name">
+                    <h1>Nikol Alexandrova</h1>
+                </div>
                 <ul>
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
@@ -30,9 +36,6 @@
     <div class='feedback-container'>
         <div class="container_content">
             <div class="container_content_inner">
-                <!-- <div class="feedback-title2">
-                    <h1>Hello World</h1>
-                </div> -->
                 <div class="par">
                     <p>
                         So far, I have solicited valuable feedback from diverse sources, including my family, friends,
