--- a/dashboard.html
+++ b/dashboard.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div id="header1">
+<body class="dashboard-body">
+    <!-- -------------header--------------- -->
+    <div id="header">
         <div class="container">
             <nav>
-                <h1>Nikol Alexandrova</h1>
+                <div id="name">
+                    <h1>Nikol Alexandrova</h1>
+                </div>
                 <ul>
                     <li><a href="dashboard.html" class="active">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
