--- a/ictfield.html
+++ b/ictfield.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="ict">
-    <div id="header1">
+    <div id="header">
         <div class="container">
             <nav>
-                <h1>Nikol Alexandrova</h1>
+                <div id="name">
+                    <h1>Nikol Alexandrova</h1>
+                </div>
                 <ul>
                     <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
@@ -153,7 +158,7 @@
             </p>
         </div>
     </div>
-    
+
     <script>
         const cards = document.querySelectorAll('.card');
         cards.forEach((card) => {
